# mechanum-robot

./: Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
arduino-motor/: arduino-motor.ino
arduino/arduino-motor/: arduino-motor.ino
arduino/arduino-motor-test/: arduino-motor-test.ino
docker/: Dockerfile  additional_sources.list
i2c-repeat/: i2c-repeat.ino
mechanum-protos/: Cargo.toml  build.rs
mechanum-protos/protos/: chassis.proto  motor.proto
mechanum-protos/src/: lib.rs
motor-controller/: Cargo.toml
motor-controller/motor-cli/: Cargo.toml
motor-controller/motor-cli/src/: main.rs
motor-controller/src/: lib.rs
motor-node/: Cargo.toml
motor-node/src/: main.rs
nodes/gamepad-chassis/: Cargo.toml
nodes/gamepad-chassis/src/: main.rs
nodes/mechanum-chassis-node/: Cargo.toml
nodes/mechanum-chassis-node/src/: main.rs
nodes/motor-node/: Cargo.toml
nodes/motor-node/src/: main.rs
test_scripts/: echo_test.py  motor_test.py
