[workspace]
resolver = "2"
members = [
    "mechanum-protos",
    "nodes/motor-node",
    "nodes/mechanum-chassis-node",
    "nodes/gamepad-chassis",
]

[workspace.dependencies]
robotica = { git = "https://github.com/rdelfin/robotica", rev = "93ff5b77374374329927b51f96ba6d59a66c3700", version = "0.1.0" }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
