[package]
name = "motor-node"
version = "0.1.0"
edition = "2021"

[dependencies]
robotica = { workspace = true }
motor-controller = { path = "../motor-controller", version = "0.1.0" }
mechanum-protos = { path = "../mechanum-protos", version = "0.1.0" }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
