[package]
name = "motor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }
motor-controller = { path = "..", version = "0.1.0" }
