[package]
name = "motor-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.25"
mechanum-protos = { path = "../../mechanum-protos", version = "0.1.0" }
pololu-motoron = { git = "https://github.com/rdelfin/pololu-motoron", rev = "4c809d402dce924dad2c70db0b351f9d8a78aa22", version = "0.1.0" }
robotica = { workspace = true }
tokio = { workspace = true }
