[package]
name = "motor-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.25"
mechanum-protos = { path = "../../mechanum-protos", version = "0.1.0" }
pololu-motoron = { git = "https://github.com/rdelfin/pololu-motoron", rev = "b9f7df8d9bfba306139bf399c9f4f460cffad778", version = "0.1.0" }
robotica = { workspace = true }
tokio = { workspace = true }
